lots of minor additives. security still doesn't work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/netcracker
 spring.datasource.username=alexander
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl=true
+//spring.datasource.initialization-mode=always
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mustache.expose-request-attributes=true
